2006-09-16  Christian Persch  <chpe@cvs.gnome.org>

	* data/default-prefs-common.js:

	Activate about:config warning.

2006-09-13  Jean-François Rameau  <jframeau@cvs.gnome.org>

	* src/ephy-link.c: (ephy_link_flags_from_current_event):

	Check for GDK_BUTTON_RELEASE event type in case of a middle click.
	Fix bug #347750.

2006-09-13  Jean-François Rameau  <jframeau@cvs.gnome.org>

	* lib/widgets/ephy-location-entry.c: (ephy_location_entry_construct_contents),
	(icon_button_press_event_cb):

	Clicking favicon in the location bar selects URL. Fix bug #349557.

2006-09-12  Christian Persch  <chpe@cvs.gnome.org>

	* m4/gecko.m4:

	Prefer xulrunner over mozilla.

2006-09-06 Christian Persch  <chpe@cvs.gnome.org>

	* *.c *.cpp:

	Remove some unnecessary static data.

2006-09-03  Christian Persch  <chpe@cvs.gnome.org>

	* configure.ac:

	Set API version to 2.17.

2006-09-03  Christian Persch  <chpe@cvs.gnome.org>

	* configure.ac:

	Post-release version bump.
	 
2006-09-03  Christian Persch  <chpe@cvs.gnome.org>

	=== Release 2.16.0 ===

2006-09-03  Christian Persch  <chpe@cvs.gnome.org>

	* configure.ac:

	Update API version for 2.16.

2006-08-24  Christian Persch  <chpe@cvs.gnome.org>

	* data/mime-types-permissions.xml:

	Add some more mime types. Fixes bug #352482.

2006-08-22  Christian Persch  <chpe@cvs.gnome.org>

	* embed/mozilla/GeckoFormSigningDialog.cpp:

	Make this LGPL.

2006-08-21  Christian Persch  <chpe@cvs.gnome.org>

	* configure.ac:
	
	Post-release version bump.

2006-08-21  Christian Persch  <chpe@cvs.gnome.org>

	=== Release 2.15.92 ===

	* NEWS:
	* configure.ac:

	Updated for 2.15.92.

	* embed/mozilla/EphyAboutModule.cpp:

	Use escaped URL for about:recover. Fixes bug #351296.

	* src/ephy-window.c:

	Remove shortcut for SendPage.

2006-08-21  Christian Persch  <chpe@cvs.gnome.org>

	* data/glade/print.glade:
	* embed/mozilla/GeckoPrintService.cpp:
	
	Don't show the empty window that the print options tab is